# algos

./: CMakeLists.txt  quick_build
array/: CMakeLists.txt
array/+1-1-search/: CMakeLists.txt  main.cc
array/binary_search_an_array_of_unknown_length/: CMakeLists.txt  main.cc
array/closest_pair_of_points/: CMakeLists.txt  main.cc
array/distance_maximizing_problem/: CMakeLists.txt  Makefile  main.cc
array/find_in_rotated_sorted_array/: CMakeLists.txt  main.cc
array/find_minimum_window_containing_a_set/: CMakeLists.txt  main.cc
array/find_sorted_array_rotation/: CMakeLists.txt  main.cc
array/heap_sort/: CMakeLists.txt  main.cc
array/interleave_array_halves/: CMakeLists.txt  main.cc
array/kth_in_two_sorted_arrays/: CMakeLists.txt  Makefile  main.cc
array/kth_smallest_in_unsorted_array/: CMakeLists.txt  main.cc
array/next_greater_element/: CMakeLists.txt  main.cc
array/next_permutation/: CMakeLists.txt  main.cc
array/nuts_and_bolts/: CMakeLists.txt  main.cc
array/quick_select/: CMakeLists.txt  main.cc
array/quick_sort/: CMakeLists.txt  main.cc
array/rotate/: CMakeLists.txt  main.cc
common/: CMakeLists.txt  array.cc  array.h  list.cc  list.h  rand.cc  rand.h  tree.h  tree_each.cc  tree_fill.cc  tree_print.cc
dp/: CMakeLists.txt
dp/0_1_knapsack/: CMakeLists.txt  main.cc
dp/longest_common_subsequence/: CMakeLists.txt  main.cc
dp/subset_sum/: CMakeLists.txt  Makefile  main.cc
list/: CMakeLists.txt
list/clone_rand/: CMakeLists.txt  main.cc
list/k_group_reverse/: CMakeLists.txt  (+1 more)
queue_stack/: CMakeLists.txt
tree/: CMakeLists.txt
(+50 files in other folders)
